# rapifb

./: .gitignore  .vimrc  CMakeLists.txt  Color.h  Error.h  FileDescriptor.cpp  FileDescriptor.h  FrameBuffer.cpp  FrameBuffer.h  MemBlock.cpp  MemBlock.h  Point.h  README.md  StbiImageWriteImpl.cpp  StbiResizeImpl.cpp  Utils.h  flying_line_demo.cpp  rapiplay.cpp  rapiresize.cpp  rapishow.cpp
cmake/: CompileOptions.cmake  FindStbImage.cmake
doc/: rapiresize  rapishow
fb/: CMakeLists.txt  Color.h  FileDescriptor.cpp  FileDescriptor.h  FrameBuffer.cpp  FrameBuffer.h  MemBlock.h  StbTexture.cpp  StbTexture.h  StbiImageWriteImpl.cpp  StbiImpl.cpp  Utils.cpp  Utils.h
fb/old/: flying_line_demo.h
tools/: CMakeLists.txt  rapiplay.cpp  rapiresize.cpp  rapishow.cpp
tools/man/: rapiplay.8
